--- a/PROJECTS.html
+++ b/PROJECTS.html
@@ -173,7 +173,7 @@ a{
             <div class="firstrow">
                 <a href="https://ui-nhyg.onrender.com/" target="_parent"><div class="f1"><p>🎬 <u>NETFLIX CLONE</u>
                     <br><br>Designed and developed a responsive Netflix-style web interface using HTML, CSS, and JavaScript.<br> The project replicates the core look and feel of Netflix,<br> including homepage layout built purely with frontend technologies.<br><br><u>“Tap to Explore Projects”</u></p></div></a>
-                <a href="http://127.0.0.1:5500/MY%20WORK.html" target="_parent"><div class="f2"><p>👟 <u>SHOE SHOP</u><br><br>
+                <a href="MY WORK.html" target="_parent"><div class="f2"><p>👟 <u>SHOE SHOP</u><br><br>
 
                     Crafted a visually appealing and responsive online shoe shop using HTML and CSS.<br>he site showcases product displays, modern layout design<br>and user-friendly navigation—capturing the look and feel of a real e-commerce storefront.<br><br><u>“Tap to Explore Projects”</u></p></div></a>
                 <a href="https://timepass-zlal.onrender.com/" target="_parent"><div class="f3"><p>❌⭕ <u>Built an Interactive Tic Tac Toe Game</u><br><br>
@@ -187,7 +187,7 @@ a{
                 <a href=""><div class="f5"><p>🛠️<u> FixNGo ~ Your All-in-One Home Services Platform</u><br><br>Designed a dynamic website using HTML, CSS, and JavaScript for the frontend and powered by Django on the backend.
 
                     FixNGo offers a seamless way for users to book common household services like plumbing, electrical work, carpentry, and more—all through an intuitive and responsive interface.<br><br><u>“Tap to Explore Projects”</u></p></div></a>
-                <a href="http://127.0.0.1:5500/stone%20paper%20game.html"><div class="f6"><p>🎮 <u>Rock-Paper-Scissors Game</u><br><br>
+                <a href="stone paper game.html"><div class="f6"><p>🎮 <u>Rock-Paper-Scissors Game</u><br><br>
                     A simple and interactive Stone-Paper-Scissors game built with HTML, CSS, and JavaScript.<br>Users play against the computer, with real-time score tracking.<br>The game ends when either player reaches 5 points and includes a reset option for replay.<br><br><u>“Tap to Explore Projects”</u></p></div></a>
             </div>
             
