--- a/contact2.html
+++ b/contact2.html
@@ -111,11 +111,11 @@ tr td{
 <div class="input-row">
 <div class="input-group">
 <label>Name:-</label>
-<input type="text" placeholder="" required>
+<input type="text" name="name" placeholder="" required>
 </div>
 <div class="input-group">
 <label>Phone:-</label>
-<input type="number" placeholder="">
+<input type="number" name="phone" placeholder="">
 </div>
 
 <div class="input-group">
@@ -126,11 +126,11 @@ tr td{
 </div>
 <div class="input-group">
 <label>Subject:-</label>
-<input type="Subject" placeholder="" required>
+<input type="Subject" name="subject" placeholder="" required>
 </div>
 </div>
 <label>Message</label>
-<textarea rows="5" placeholder="Your Message"></textarea>
+<textarea rows="5" name="message" placeholder="Your Message"></textarea>
 
 <button type="Submit">Send</button>
 </form>
