--- a/contact2.html
+++ b/contact2.html
@@ -126,7 +126,7 @@ tr td{
 </div>
 <div class="input-group">
 <label>Subject:-</label>
-<input type="Subject" name="subject" placeholder="" required>
+<input type="text" name="subject" placeholder="" required>
 </div>
 </div>
 <label>Message</label>
