--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ I enjoy building dynamic, secure, and scalable applications using Django and Pyt
 
 <div class="icons">
 
-<a href="https://www.instagram.com/sanyal.biswajeet_03/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+<a href="https://github.com/biswajeet2728" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
 
 <a href="https://www.linkedin.com/in/biswajeet-sanyal03" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
 <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
