--- a/My skill.html
+++ b/My skill.html
@@ -137,6 +137,8 @@ h3{
 <span class="bar"><span class="java"></span></span></li></li>
 <li><h3>JAVASCRIPT</h3>
 <span class="bar"><span class="java"></span></span></li></li>
+<li><h3>React</h3>
+<span class="bar"><span class="java"></span></span></li></li>
 <li><h3>BASIC AWS CLOUD</h3>
 <span class="bar"><span class="java"></span></span></li></li>
 </div>
