--- a/work experience.html
+++ b/work experience.html
@@ -49,7 +49,7 @@ h1{
     <main>
         <div class="Facility">
             <h2>~ Seeking internship in Cloud or Web Development to leverage academic <br> knowledge and hands-on skills.<br><br>
-                ~ Proficient in HTML, CSS, JavaScript and Cloud technologies.<br><br>
+                ~ Proficient in HTML, CSS, JavaScript, React, Django and Cloud technologies.<br><br>
                 ~ Completed multiple projects demonstrating ability to design and deploy web applications.<br><br>
                
                 ~ Designed and implemented a multi-service booking platform (e.g., FixNGo) demonstrating real-world application structure, user authentication, and database integration.<br><br>
