--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@ ul li a:hover{
 <div class="info">
 <h2>Hi,I am <span>Biswajeet Sanyal</span>.</h2><br>
 
-<h3>I'm a web and cloud enthusiast with a solid grasp of frontend technologies such as HTML, CSS, and JavaScript.<br><br>
-I enjoy building dynamic, secure, and scalable applications using Django and Python, complemented by<br><br> my background in C++.<br><br> As I continue to grow, I’m expanding my cloud expertise through a Cloud Practitioner course on Udemy,<br><br> aiming to deliver modern solutions that prioritize user experience and performance.</h3>
+<h3>I'm a web and cloud enthusiast with a solid grasp of frontend technologies such as HTML, CSS, React and JavaScript.<br><br>
+I enjoy building dynamic, secure, and scalable applications using Django and Python, complemented by<br><br> my background in JAVA.<br><br> As I continue to grow, I’m expanding my cloud expertise through a Cloud Practitioner course on Udemy,<br><br> aiming to deliver modern solutions that prioritize user experience and performance.</h3>
 
 <div class="icons">
 
